--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ekiio-video-react",
   "version": "3.0.3",
-  "description": "React video player",
+  "description": "specific Ekiio video player for Ekiio.com",
   "main": "lib/index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development ./docs/index.js --host 0.0.0.0 --open",
@@ -11,19 +11,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/trunghd2809/fl-react-video.git"
+    "url": "git+https://github.com/dulx96/ekiio-video-react.git"
   },
   "keywords": [
     "react",
     "video",
     "ekiio"
   ],
-  "author": "F",
+  "author": "DU LX",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/trunghd2809/fl-react-video/issues"
+    "url": "https://github.com/dulx96/ekiio-video-react/issues"
   },
-  "homepage": "https://github.com/trunghd2809/fl-react-video#readme",
+  "homepage": "https://github.com/dulx96/ekiio-video-react#readme",
   "peerDependencies": {
     "react": "^15.0e.0 || ^16.0.0",
     "react-dom": "^15.0.0 || ^16.0.0"
